27_matrix_input/grade.txt
Grading at Wed Dec 30 04:40:09 UTC 2020
Attempting to compile rotateMatrix.c
rotateMatrix.c:5:0: error: ignoring #pragma warning  [-Werror=unknown-pragmas]
 #pragma warning(disable : 4996)
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
